# FRA532_LAB1_6406_6428_6471

./: README.md  install.bash  readme.txt
robot_control/: CMakeLists.txt  package.xml
robot_control/scripts/: global_planner.py  pp_w_vff.py  purepursuit_example.py  purepursuit_solution.py  simple_controller_example.py  simple_controller_solution.py  test_map.py  velocity_controller.py  velocity_controller_ok.py  velocity_controller_ok2.py  vff_avoidance_ex.py  vff_avoidance_sol.py  wheel_controller.py
ur5_ros2_gazebo/: CMakeLists.txt
ur5_ros2_gazebo/config/: ur5_controller.yaml
ur5_ros2_gazebo/launch/: ur5_simulation.launch.py
ur5_ros2_gazebo/meshes/collision/: Carver-Mun-M2-2.stl
ur5_ros2_gazebo/urdf/: ur5.urdf.xacro  ur5_common.xacro  ur5_macro.urdf.xacro  ur5_ros2control.xacro  ur5_transmission.xacro
ur5_ros2_gazebo/worlds/: pal_office.world  ur5.world
